tests/negative/neg_pr113_duplicate_named_constraint.safe
package neg_pr113_duplicate_named_constraint
   type packet (kind : character = 'A', count : integer = 0) is
      record
         value : integer

   p : packet (kind = 'A', kind = 'B') = (value = 1)

